settings/main/default/objects/Setting_Value__c/Setting_Value__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Setting Value</label>
</CustomObject>