settings/main/default/objects/Setting_Value__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A field to tell whether this Setting object should be looked at. It allows settings to be disabled without being deleted, so they can easily be reused at a later time</description>
    <inlineHelpText>Uncheck this box to make this setting inactive (instead of deleting it).</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>