settings/main/default/objects/Setting_Value__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of value stored in this Setting. Must be &quot;String&quot;, &quot;Integer&quot;, &quot;Double&quot;, &quot;Boolean&quot;, &quot;Date&quot;, or &quot;DateTime&quot;</description>
    <inlineHelpText>Must be &quot;String&quot;, &quot;Integer&quot;, &quot;Double&quot;, &quot;Boolean&quot;, &quot;Date&quot;, or &quot;DateTime&quot;</inlineHelpText>
    <label>Type</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>