settings/main/default/objects/Setting_Value__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The text equivalent value of this Setting object.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>